# open-clue

./: .gitignore  README.md
.github/workflows/: release.yml
assets/: favicon_key.icns
docs/: PRD.md  ROADMAP.md  SCHEMA_SPEC.md  TECHNICAL_SPEC.md
docs/superpowers/plans/: 2026-04-03-web-builder.md  2026-04-06-builder-features.md  2026-04-06-canvas-editor.md
docs/superpowers/specs/: 2026-04-06-builder-features-design.md
engine/: OpenClue-macos.spec  OpenClue.spec  README.md  pyproject.toml
engine/clue/: __init__.py  main.py
engine/clue/cipher/: decrypt.py  encrypt.py
engine/clue/engine/: mechanics.py  parser.py  state.py
engine/clue/schema/: models.py  validator.py
engine/clue/ui/: app.py  renderer.py
engine/hooks/: hook-encoding.py
engine/scenarios/: abandoned_lab.json  midnight_library.json  terminal_escape.json
engine/tests/: conftest.py  test_cipher.py  test_mechanics.py  test_validator.py
plans/: effervescent-drifting-pebble.md  plan_scenario_and_engine.md
web/: package-lock.json  package.json  test_zod.mjs  vitest.config.ts
web/__tests__/: cipher.test.ts  schema.test.ts  validator.test.ts  zip.test.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/builder/: page.tsx
web/components/canvas/: ActionListEditor.tsx  ContextMenu.tsx  EdgeWithDelete.tsx  GroupNode.tsx  MemoNode.tsx  NpcEditor.tsx  PointRequirementsEditor.tsx  PuzzleEditor.tsx  RoomCanvas.tsx  RoomDetailPanel.tsx  RoomNode.tsx
web/components/sidebar/: MetaSidebar.tsx
web/lib/: cipher.ts  db.ts  projects.ts  schema.ts  store.ts  validator.ts  zip.ts
(+16 files in other folders)
